# chibi-scheme-cmake

./: CMakeLists.txt  chibi-genstatic-helper.cmake
